# Shteiner-s-tree

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Include/: GraphModel.hpp  GraphView.hpp  ShteinerTreeAlgh.hpp
Libs/: CMakeLists.txt
Libs/GraphModel/: CMakeLists.txt  GraphModel.cpp  GraphNode.cpp
Libs/GraphView/: CMakeLists.txt  GraphView.cpp
Libs/ShteinerTreeAlgh/: CMakeLists.txt  ShteinerTreeAlgh.cpp
ShteinerTree/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
ShteinerTree/GraphModel/: GraphModel.cpp  GraphModel.hpp
ShteinerTree/GraphView/: GraphView.cpp  GraphView.hpp
ShteinerTree/GraphWidget/: GraphWidget.cpp  GraphWidget.hpp
ShteinerTree/MatrixWidget/: MatrixWidget.cpp  MatrixWidget.hpp
ShteinerTree/Resources/: icon.rc  resource.qrc
tests/: first.txt  second.txt
